--- a/src/pages/volunteer/_FestivalVolunteer.astro
+++ b/src/pages/volunteer/_FestivalVolunteer.astro
@@ -1,5 +1,5 @@
 ---
-import Title from '@components/Title.astro';
+import Title from "@components/Title.astro";
 ---
 
 <div class="content-container">
@@ -10,7 +10,7 @@ import Title from '@components/Title.astro';
   </p>
   <a
     href="https://pointapp.org/orgs/3346"
-    class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+    class="text-shadow block font-base font-medium text-center rounded antialiased text-gray-200 flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
   >
     » SIGN UP HERE
   </a>
