--- a/src/pages/volunteer/_OpenPositions.astro
+++ b/src/pages/volunteer/_OpenPositions.astro
@@ -1,21 +1,21 @@
 ---
-import BackToTop from '@components/BackToTop.astro';
-import Title from '@components/Title.astro';
+import BackToTop from "@components/BackToTop.astro";
+import Title from "@components/Title.astro";
 
-import { getCollection } from 'astro:content';
+import { getCollection } from "astro:content";
 
-const openPositions = await getCollection('openPositions');
+const openPositions = await getCollection("openPositions");
 ---
 
 {
-  openPositions.map(position => (
+  openPositions.map((position) => (
     <div class="content-container">
       <BackToTop />
       <Title title={position.data.title} />
       <p>{position.data.description}</p>
       <a
         href={`/volunteer/committee-form?position=${position.data.title}`}
-        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+        class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-medium flex-none mt-3 bg-gold-900 w-fit text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
       >
         » APPLY
       </a>
