--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -1,10 +1,9 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import Title from '@components/Title.astro';
-import BackToTop from '@components/BackToTop.astro';
-import OpenPositions from './_OpenPositions.astro';
-import FestivalVolunteer from './_FestivalVolunteer.astro';
-
+import Layout from "@layouts/Layout.astro";
+import Title from "@components/Title.astro";
+import BackToTop from "@components/BackToTop.astro";
+import OpenPositions from "./_OpenPositions.astro";
+import FestivalVolunteer from "./_FestivalVolunteer.astro";
 ---
 
 <Layout title="Volunteer">
@@ -18,7 +17,7 @@ import FestivalVolunteer from './_FestivalVolunteer.astro';
         </p>
         <a
           href="/volunteer/housing-form"
-          class="text-shadow block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
+          class="text-shadow font-base font-medium block text-center rounded antialiased text-gray-200 flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
         >
           » SIGN UP HERE
         </a>
