--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,38 +11,37 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
 
 <!doctype html>
 <html lang="en" class="h-full scroll-smooth bg-site-background">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{fullTitle}</title>
-    <HeadOpenGraph></HeadOpenGraph>
-	</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{fullTitle}</title>
+    <HeadOpenGraph />
+  </head>
 
   <body class="flex min-h-full">
-		<div class="flex flex-col w-full">
-
-			<div id="back-to-top"></div>
+    <div class="flex flex-col w-full">
+      <div id="back-to-top"></div>
 
       <!-- HEADER -->
       <header class="relative flex-none">
-        <Header></Header>
+        <Header />
       </header>
 
       <!-- MAIN -->
-      <main class="flex-auto bg-main-background pt-10 border-t-1 border-content-border">
-        <div class="max-w-screen-xl mx-auto w-full px-6 lg:pt-8 lg:pb-12">
+      <main
+        class="flex-auto bg-main-background pt-10 border-t-1 border-content-border"
+      >
+        <div class="max-w-screen-xl mx-auto w-full pb-10 px-6 lg:pt-8 lg:pb-12">
           <slot />
         </div>
       </main>
 
       <!-- FOOTER -->
       <footer class="mt-auto w-full">
-        <Footer ></Footer>  
+        <Footer />
       </footer>
     </div>
   </body>
 </html>
-
-
