--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,7 +3,7 @@
 @import "tailwindcss";
 
 @theme {
-	/* Colors */
+  /* Colors */
 
   /* Teal */
   --color-teal-100: oklch(84.96% 0.0592 213.66);
@@ -11,38 +11,23 @@
   --color-teal-300:	*/
   --color-teal-500: oklch(56.2% 0.0943 208.16);
   /* --color-teal-600: */
-	
-  --color-teal-700:	oklch(50% 0.0876 213.66);			 
-  --color-teal-800:	oklch(50% 0.1 213.66);	
+
+  --color-teal-700: oklch(50% 0.0876 213.66);
+  --color-teal-800: oklch(50% 0.1 213.66);
   --color-teal-900: oklch(50% 0.0876 213.66);
   --color-teal-950: oklch(55% 0.0676 213.66);
-	--color-teal-1000: oklch(40% 0.0876 213.66);
+  --color-teal-1000: oklch(40% 0.0876 213.66);
 
   /* Gold */
   --color-gold-100: oklch(90.14% 0.0841 86.23);
   --color-gold-200: oklch(84.11% 0.0750 86.23);
-  --color-gold-300:	oklch(79.63% 0.0750 86.23); 
+  --color-gold-300: oklch(79.63% 0.0750 86.23);
   --color-gold-400: oklch(76.39% 0.0841 86.23);
-  --color-gold-500:	oklch(72.15% 0.0841 86.23); 
-  --color-gold-600:	oklch(62.16% 0.0841 86.23); 
-  --color-gold-700:	oklch(50.00% 0.0841 86.23); 
-  --color-gold-800:	oklch(48.18% 0.0841 86.23); 
+  --color-gold-500: oklch(72.15% 0.0841 86.23);
+  --color-gold-600: oklch(62.16% 0.0841 86.23);
+  --color-gold-700: oklch(50.00% 0.0841 86.23);
+  --color-gold-800: oklch(48.18% 0.0841 86.23);
   --color-gold-900: oklch(41.18% 0.0841 86.23);
-
-	/* Navy */
-	--color-navy-600: oklch(39.54% 0.0625 274.13);
-	--color-navy-800: oklch(29.54% 0.0425 274.13);
-
-  /* Brown */
-  /* --color-brown-100:
-  --color-brown-200:
-  --color-brown-300: 
-  --color-brown-400: 
-  --color-brown-500: 
-  --color-brown-600:
-  --color-brown-700: 
-  --color-brown-800:
-  --color-brown-900:  */
 
   /* Gray */
   --color-gray-100: oklch(96.08% 0 0);
@@ -55,34 +40,35 @@
   --color-gray-800: oklch(40.64% 0 0);
   --color-gray-900: oklch(32.72% 0 0);
 
-	/* Backgrounds */
-	--color-site-background: var(--color-gold-300);
-	--color-main-background: var(--color-teal-700);
+  /* Backgrounds */
+  --color-site-background: var(--color-gold-300);
+  --color-main-background: var(--color-teal-700);
 
 
-	/* Text Color */
-	--color-title: var(--color-gold-700);
-	--color-subtitle: var(--color-teal-700);
-	--color-title-border: var(--color-gold-600);
-	--color-content-text: var(--color-gold-800);
+  /* Text Color */
+  --color-title: var(--color-gold-700);
+  --color-subtitle: var(--color-teal-700);
+  --color-title-border: var(--color-gold-600);
+  --color-content-text: var(--color-gold-800);
   --color-link: var(--color-teal-800);
-	--color-content-link: var(--color-teal-800);
-	--color-title-shadow: var(--color-gold-100);
+  --color-content-link: var(--color-teal-800);
+  --color-title-shadow: var(--color-gold-100);
 
-	/* Fonts */
-	--font-title: 'Fredoka', serif;
-	--font-base: 'Fredoka', serif;
+  /* Fonts */
+  --font-title: 'Fredoka', serif;
+  --font-base: 'Fredoka', serif;
 
-	/* Nav Button */
-	--color-button-background: var(--color-teal-500);
-	--color-button-active: var(--color-gold-600);
-	--color-button-shadow: var(--color-teal-1000);
+  /* Nav Button */
+  --color-button-background: var(--color-teal-500);
+  --color-button-active: var(--color-teal-1000);
+  --color-button-shadow: var(--color-teal-1000);
   --color-button-ring: var(--color-gray-300);
   --color-button-text: var(--color-gray-200);
+  --color-button-text-active: var(--color-gray-200);
 
-	/* Content */
-	--color-content-background: var(--color-gold-200);
-	--color-content-border: var(--color-gray-300);
+  /* Content */
+  --color-content-background: var(--color-gold-200);
+  --color-content-border: var(--color-gray-300);
 
 
   --color-accent: var(--color-teal-500);
@@ -90,7 +76,7 @@
 }
 
 @utility content-container {
-	@apply bg-radial-[at_50%_40%] from-content-background from-60% to-gold-500 p-3 sm:p-5 overflow-hidden relative shadow-lg rounded-lg border-1 border-content-border;
+  @apply bg-radial-[at_50%_40%] from-content-background from-60% to-gold-500 p-3 sm:p-5 overflow-hidden relative shadow-lg rounded-lg border-1 border-content-border;
 }
 
 @utility title {
@@ -104,17 +90,22 @@
   @apply gap-4 sm:gap-10
 }
 
+
+
 .content,
 p {
   @apply font-base antialiased text-content-text leading-8 text-xl flex-1;
 }
+
 .content ul {
   @apply pl-5 sm:pl-10 list-disc;
 }
+
 .content a,
 p a {
   @apply text-content-link underline underline-offset-2;
 }
+
 .content strong {
   @apply font-semibold;
 }
