added description to the slideshow images

--- a/src/pages/home/_Slideshow.astro
+++ b/src/pages/home/_Slideshow.astro
@@ -25,6 +25,9 @@ const slides = await getCollection("slideshow");
           inferSize
           class="object-cover w-full h-full"
         />
+        <div class="absolute bottom-0 left-0 w-full p-4 bg-gradient-to-t from-black/70 to-transparent">
+          <p class="text-gray-300 text-sm sm:text-lg font-semibold text-right">{slide.data.description}</p>
+        </div>
       </div>
     ))
   }
