--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ClientRouter } from "astro:transitions";
 import "@styles/global.css";
 import HeadOpenGraph from "./head/OpenGraph.astro";
 import Header from "@components/Header.astro";
@@ -17,6 +18,7 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{fullTitle}</title>
+    <ClientRouter />
     <HeadOpenGraph />
   </head>
 
