--- a/src/pages/home/_FestivalInfoBlock.astro
+++ b/src/pages/home/_FestivalInfoBlock.astro
@@ -15,28 +15,28 @@ import Title from "@components/Title.astro";
     </span>
   </div>
   <div> -->
-    <Title title="Upcoming Festival" center={true} />
-    <div
-      class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
-    >
-      <a href="/festival">
-        <span class="text-accent text-center mb-2 hidden font-emphasis">
-          <span class="text-gray-200">HONK!</span> FEST WEST
-        </span>
-        <div
-          class="flex flex-col lg:flex-row justify-center items-center w-full"
+  <Title title="Upcoming Festival" center={true} />
+  <div
+    class="text-shadow flex flex-col items-center h-full text-xl sm:text-3xl font-medium tracking-wide z-10"
+  >
+    <a href="/festival">
+      <span class="text-accent text-center mb-2 hidden font-emphasis">
+        <span class="text-gray-200">HONK!</span> FEST WEST
+      </span>
+      <div class="flex flex-col lg:flex-row justify-center items-center w-full">
+        <span
+          class="block lg:mb-0 text-subtitle tracking-normal md:mr-2 font-emphasis text-center"
         >
-          <span
-            class="block lg:mb-0 text-subtitle tracking-normal md:mr-2 font-emphasis text-center"
-          >
-            <time>May 30 - June 1, 2025</time>
-          </span>
-        </div>
-        <span class="text-gray-100 text-center block font-emphasis mt-2">
-          SEATTLE, WA
+          <time>May 30 - June 1, 2025</time>
         </span>
-      </a>
-      <!-- <div class="">
+      </div>
+      <span
+        class="text-gray-100 text-center block font-emphasis mt-2 city-text-shadow"
+      >
+        SEATTLE, WA
+      </span>
+    </a>
+    <!-- <div class="">
         <a
           class="block font-base font-bold antialiased text-base sm:text-lg flex-none z-10 mt-5 hover:scale-105 text-link"
           href="/festival"
@@ -44,6 +44,15 @@ import Title from "@components/Title.astro";
           » More Info
         </a>
       </div> -->
-    </div>
   </div>
 </section>
+
+<style>
+  .city-text-shadow {
+    text-shadow:
+      -1px -1px 3px var(--color-location-shadow),
+      1px -1px 3px var(--color-location-shadow),
+      -1px 1px 3px var(--color-location-shadow),
+      1px 1px 3px var(--color-location-shadow);
+  }
+</style>
