fix volunteer form

--- a/src/pages/about/_HonkFamily.astro
+++ b/src/pages/about/_HonkFamily.astro
@@ -18,7 +18,7 @@ const { family } = Astro.props;
               href={honk.url}
             >
               <div class="block border-gold-300 border-4 rounded-xl w-80 relative top-4 text-2xl transition ease-in-out hover:bg-opacity-100 hover:scale-105">
-                <span class="inline-block relative bottom-4  px-2 rounded-xl bg-opacity-90 text-accent-lt">
+                <span class="inline-block relative bottom-4  px-2 rounded-xl bg-opacity-90 text-accent-lt title-text-shadow">
                   {honk.name}
                 </span>
               </div>
