--- a/src/pages/volunteer/committee-form-success.astro
+++ b/src/pages/volunteer/committee-form-success.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '@layouts/Layout.astro';
+import Layout from "@layouts/Layout.astro";
 ---
 
 <Layout title="Volunteer Committee Form">
   <div class="content-container">
-    <h2 class="text-4xl text-center text-gray-200">Thank You!</h2>
-    <p class="text-center text-xl mt-4">
+    <h2 class="text-4xl text-center text-title">Thank You!</h2>
+    <p class="text-center text-xl mt-4 content">
       Your application has been submitted. We will be in touch with you soon.
     </p>
   </div>
