--- a/src/pages/volunteer/index.astro
+++ b/src/pages/volunteer/index.astro
@@ -10,7 +10,7 @@ import FestivalVolunteer from "./_FestivalVolunteer.astro";
   <div class="flex flex-wrap md:flex-nowrap layout-gap">
     <div class="w-full md:w-1/3 grid grid-cols-1 layout-gap h-fit">
       <FestivalVolunteer />
-      <div class="content-container">
+      <!-- <div class="content-container">
         <Title title="Provide Housing" center={true} />
         <p class="content">
           Sign up to provide housing for HONK! Fest West out-of-town bands.
@@ -21,7 +21,7 @@ import FestivalVolunteer from "./_FestivalVolunteer.astro";
         >
           » SIGN UP HERE
         </a>
-      </div>
+      </div> -->
     </div>
     <div class="w-full md:w-2/3 flex flex-col layout-gap">
       <div class="content-container">
