--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -34,7 +34,9 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
       <main
         class="flex-auto bg-main-background pt-10 border-t-1 border-content-border"
       >
-        <div class="max-w-screen-xl mx-auto w-full pb-10 px-6 lg:pt-8 lg:pb-12">
+        <div
+          class="max-w-screen-xl mx-auto w-full pb-10 px-6 pt-6 lg:pt-8 lg:pb-12"
+        >
           <slot />
         </div>
       </main>
