--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,8 +23,8 @@ const footerSupporters = supporters.filter((s) => s.data.footer);
           <span
             class="text-xs leading-tight w-1/5 text-gold-900 mr-6 text-justify text-opacity-80 pr-3"
           >
-            This project is supported in part by the National Endowment for the
-            Arts and the WA State Arts Commission.
+            This project is supported in part by the Seattle Office of Arts &
+            4Culture.
           </span>
           {
             footerSupporters.map((supporter) => (
