--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,7 @@ const fullTitle = title ? `${title} - HONK! Fest West` : "HONK! Fest West";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{fullTitle}</title>
+    <ClientRouter />
     <HeadOpenGraph />
   </head>
 
