--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -141,7 +141,7 @@ const shoutoutSupporters = supporters.filter((s) => s.data.type === "shoutout");
           class="border-b-4 border-opacity-60 border-accent border-dotted w-full block mb-4"
         ></span>
 
-        <p>
+        <p class="content">
           We thank the original
           <a href="http://honkfest.org/">HONK! Boston, MA</a>—the
           mothership—which inspired our festival and has since seen other
