--- a/src/layouts/head/OpenGraph.astro
+++ b/src/layouts/head/OpenGraph.astro
@@ -1,13 +1,16 @@
 ---
-import socialmediaImg from '@assets/images/2025/hfw-2025-socialmedia-square.jpg';
+import socialmediaImg from "@assets/images/2025/2025-opengraph.png";
 ---
 
 <meta property="og:url" content="https://honkfestwest.org/" />
 <meta property="og:title" content="HONK! Fest West" />
-<meta property="og:description" content="An independent 501(c)(3) arts organization that produces an annual free, three-day, community-supported music festival in public spaces of the Seattle area." />
+<meta
+    property="og:description"
+    content="An independent 501(c)(3) arts organization that produces an annual free, three-day, community-supported music festival in public spaces of the Seattle area."
+/>
 <meta property="og:image" content={socialmediaImg.src} />
-<meta property="og:image:width" content=`${socialmediaImg.width}` />
-<meta property="og:image:height" content=`${socialmediaImg.height}` />
+<meta property="og:image:width" content={`${socialmediaImg.width}`} />
+<meta property="og:image:height" content={`${socialmediaImg.height}`} />
 <meta property="og:type" content="event" />
 <meta property="og:event_type" content="Festival" />
 <meta property="og:start_time" content="2025-05-30T00:00:00-0700" />
@@ -17,6 +20,12 @@ import socialmediaImg from '@assets/images/2025/hfw-2025-socialmedia-square.jpg'
 
 <meta property="event:start_time" content="2025-05-30T00:00:00-07:00" />
 <meta property="event:end_time" content="2025-06-01T23:59:59-07:00" />
-<meta property="event:venue" content="Seattle, WA (Fri: Georgetown, Sat: Columbia City Park, Sun: TBD)" />
-<meta property="event:organizer" content="https://www.facebook.com/honkfestwest"/>
-<meta property="event:published_time" content="2023-10-26T00:00:00-07:00"/>
+<meta
+    property="event:venue"
+    content="Seattle, WA (Fri: Georgetown, Sat: Columbia City Park, Sun: TBD)"
+/>
+<meta
+    property="event:organizer"
+    content="https://www.facebook.com/honkfestwest"
+/>
+<meta property="event:published_time" content="2023-10-26T00:00:00-07:00" />
