--- a/src/pages/home/index.astro
+++ b/src/pages/home/index.astro
@@ -36,7 +36,7 @@ import HonkAllstars from "./_posts/HonkAllstars.astro";
       <NewsletterForm />
     </section>
 
-    <SelectedPost id="2025/spring-fundraiser" />
+    <!-- <SelectedPost id="2025/spring-fundraiser" /> -->
 
     <article
       class="w-full content-container col-span-6 flex flex-col md:flex-row"
